--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="/handle-api.js"></script>
     <title>Track Your Watched Shows</title>
 </head>
 <body>
-    Hello World
+    <h1>Search Amine</h1>
+    <input type="text" id="searchField">
+    <div id="errorMsg" style="color:red;"></div>
+    <ul id="resultsList"></ul>
 </body>
 </html>
